--- a/CV2.html
+++ b/CV2.html
@@ -10,19 +10,31 @@
 </head>
 <body>
 <h1 id="michel-szklo">Michel Szklo</h1>
-<table>
+<table style="width:85%;">
+<colgroup>
+<col width="45%" />
+<col width="38%" />
+</colgroup>
 <tbody>
 <tr class="odd">
 <td align="left">Bredaseweg 201</td>
-<td align="right">m.szklo@tilburguniversity.edu</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Tilburg ND5038</td>
-<td align="right">+31 6 3049 2826</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">The Netherlands</td>
-<td align="right"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left">m.szklo@tilburguniversity.edu</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left">+31 6 3049 2826</td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
@@ -46,39 +58,84 @@
 <h2 id="professional-experience">Professional Experience</h2>
 <dl>
 <dt>FEB/13-JUN/15</dt>
-<dd><strong>Anima Investimentos</strong>; São Paulo, Brazil
+<dd><p><strong>Anima Investimentos</strong>; São Paulo, Brazil</p>
 </dd>
-</dl>
-<p>*Anima Investimentos is a single family office of one of the main Natura Cosméticos (largest cosmetics company in Brazil, listed on Sao Paulo Stock Exchange) shareholder</p>
-<p>Analyst - Asset Allocation and Macroeconomics (Jan/15 - Jun/2015)</p>
-<ul>
-<li>Reporting and analisys of portfolio historical absolute and relative performance</li>
+<dd><p>Anima Investimentos is a single family office of one of the main Natura Cosméticos (largest cosmetics company in Brazil, listed on Sao Paulo Stock Exchange) shareholder</p>
+</dd>
+<dt>* Analyst - Asset Allocation and Macroeconomics (Jan/15 - Jun/2015)*</dt>
+<dd><ul>
+<li>Reporting and analisys of portfolio historical absolute and relative performance.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Brazil and Global macroeconomics analisys.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Responsible for the Macroeconomics House View publication.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Asset Allocation recommendations.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Member of the Investment Comitee</li>
 </ul>
-<p>Internship - Asset Allocation and Macroeconomics (Feb/13 - Dec/2013)</p>
-<dl>
-<dt>MAY/12-JUL/12</dt>
-<dd><strong>Safra National Bank of New York</strong>; New York, USA
 </dd>
-</dl>
-<p>Internship - Trading Desk (Structured Notes and Fixed Income)</p>
-<ul>
+<dt>* Internship - Asset Allocation and Macroeconomics (Feb/13 - Dec/2013)*</dt>
+<dd><ul>
+<li>Reporting and analisys of portfolio performance.</li>
+</ul>
+</dd>
+<dd><ul>
+<li>Brazil and Global macroeconomics research.</li>
+</ul>
+</dd>
+<dt>MAY/12-JUL/12</dt>
+<dd><p><strong>Safra National Bank of New York</strong>; New York, USA</p>
+</dd>
+<dt>* Internship - Trading Desk (Structured Notes and Fixed Income)*</dt>
+<dd><ul>
 <li>Keep track of products performances.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Research to support new structured notes.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Cash flows of clients positions.</li>
 </ul>
+</dd>
+</dl>
 <h2 id="other">Other</h2>
-<ul>
-<li>Portuguese: Native; English: Fluent; Spanish: Intermediate; Hebrew: Intermediate.</li>
+<dl>
+<dt>: * Portuguese: Native; English: Fluent; Spanish: Intermediate; Hebrew: Intermediate.</dt>
+<dd><ul>
 <li>Advanced skills in: Word, PowerPoint, Excel (including VBA) and Bloomberg Terminal.</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Intermediate skills in: Matlab, Eviews, Stata</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Projeto Entreeducar: volunteer tutoring of public school kids on Math and Portuguese through non formal education methods. (Aug/2010 – Dec/2010)</li>
+</ul>
+</dd>
+<dd><ul>
 <li>CIP holiday camp: volunteer coordinator of non formal educators group. (Jan/2010 – Dec/2010)</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Projeto Pólen: volunteer tutoring of kids from 8-12 years old. (Jan/2009 – Dec/2009)</li>
+</ul>
+</dd>
+<dd><ul>
 <li>Leadership Course at Congregação Israelita Paulista - CIP (Feb/2005 – Dec/2006)</li>
 </ul>
+</dd>
+</dl>
 </body>
 </html>
