--- a/CV2.html
+++ b/CV2.html
@@ -10,31 +10,25 @@
 </head>
 <body>
 <h1 id="michel-szklo">Michel Szklo</h1>
-<table style="width:85%;">
+<table style="width:61%;">
 <colgroup>
-<col width="45%" />
-<col width="38%" />
+<col width="61%" />
 </colgroup>
 <tbody>
 <tr class="odd">
 <td align="left">Bredaseweg 201</td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Tilburg ND5038</td>
-<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">The Netherlands</td>
-<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">m.szklo@tilburguniversity.edu</td>
-<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">+31 6 3049 2826</td>
-<td align="left"></td>
 </tr>
 </tbody>
 </table>
@@ -62,7 +56,7 @@
 </dd>
 <dd><p>Anima Investimentos is a single family office of one of the main Natura Cosméticos (largest cosmetics company in Brazil, listed on Sao Paulo Stock Exchange) shareholder</p>
 </dd>
-<dt>* Analyst - Asset Allocation and Macroeconomics (Jan/15 - Jun/2015)*</dt>
+<dt><em>Analyst - Asset Allocation and Macroeconomics (Jan/15 - Jun/2015)</em></dt>
 <dd><ul>
 <li>Reporting and analisys of portfolio historical absolute and relative performance.</li>
 </ul>
@@ -83,7 +77,7 @@
 <li>Member of the Investment Comitee</li>
 </ul>
 </dd>
-<dt>* Internship - Asset Allocation and Macroeconomics (Feb/13 - Dec/2013)*</dt>
+<dt><em>Internship - Asset Allocation and Macroeconomics (Feb/13 - Dec/2013)</em></dt>
 <dd><ul>
 <li>Reporting and analisys of portfolio performance.</li>
 </ul>
@@ -95,7 +89,7 @@
 <dt>MAY/12-JUL/12</dt>
 <dd><p><strong>Safra National Bank of New York</strong>; New York, USA</p>
 </dd>
-<dt>* Internship - Trading Desk (Structured Notes and Fixed Income)*</dt>
+<dt><em>Internship - Trading Desk (Structured Notes and Fixed Income)</em></dt>
 <dd><ul>
 <li>Keep track of products performances.</li>
 </ul>
